# VecFields

./: CMakeLists.txt  README.md  terminology.md
app/: CMakeLists.txt
app/combing/: CMakeLists.txt  main.cpp
app/curl_matrices/: CMakeLists.txt  main.cpp
app/cut_mesh/: CMakeLists.txt  main.cpp
app/dec/: CMakeLists.txt  main.cpp
app/div_matrices/: CMakeLists.txt  main.cpp
app/gradient_matrices/: CMakeLists.txt  main.cpp
app/index_prescription/: CMakeLists.txt  main.cpp
app/isolines/: CMakeLists.txt  main.cpp
app/mass_matrices/: CMakeLists.txt  main.cpp
app/mesher/: CMakeLists.txt  main.cpp
app/polyvector_field/: CMakeLists.txt  main.cpp
app/polyvector_to_raw/: CMakeLists.txt  main.cpp
app/power_field/: CMakeLists.txt  main.cpp
app/power_to_raw/: CMakeLists.txt  main.cpp
app/principal_matching/: CMakeLists.txt  main.cpp
app/raw_to_polyvector/: CMakeLists.txt  main.cpp
app/streamlines/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_field_processing.cpp  test_mesh_io.cpp  test_polyvector_field.cpp
tutorial/101_GlyphRendering/: CMakeCache.txt  cmake_install.cmake
tutorial/101_GlyphRendering/101_GlyphRendering/: Makefile  cmake_install.cmake
tutorial/101_GlyphRendering/102_DiscreteTangentBundles/: Makefile  cmake_install.cmake
tutorial/101_GlyphRendering/103_StreamlineTracing/: Makefile  cmake_install.cmake
tutorial/101_GlyphRendering/104_FaceVertexEdgeData/: Makefile  cmake_install.cmake
tutorial/101_GlyphRendering/105_Sparsity/: Makefile  cmake_install.cmake
tutorial/101_GlyphRendering/106_PrincipalDirections/: Makefile  cmake_install.cmake
tutorial/101_GlyphRendering/201_PrincipalMatching/: Makefile  cmake_install.cmake
tutorial/102_DiscreteTangentBundles/: CMakeLists.txt
(+38 files in other folders)
