cmake_minimum_required(VERSION 3.20)
project(Directional_apps)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type")
endif()

set(DIRECTIONAL_ROOT "${CMAKE_CURRENT_LIST_DIR}/..")
set(DIRECTIONAL_SOURCE_DIR "${DIRECTIONAL_ROOT}/include")
set(DIRECTIONAL_EXTERNAL "${DIRECTIONAL_ROOT}/external")

include_directories(${DIRECTIONAL_SOURCE_DIR})
include_directories(${DIRECTIONAL_EXTERNAL}/eigen)

add_subdirectory("power_field")
add_subdirectory("polyvector_field")
add_subdirectory("combing")
add_subdirectory("raw_to_polyvector")
add_subdirectory("polyvector_to_raw")
add_subdirectory("power_to_raw")
add_subdirectory("principal_matching")
add_subdirectory("index_prescription")
add_subdirectory("dec")
add_subdirectory("gradient_matrices")
add_subdirectory("curl_matrices")
add_subdirectory("div_matrices")
add_subdirectory("mass_matrices")
add_subdirectory("streamlines")
add_subdirectory("isolines")
add_subdirectory("cut_mesh")
add_subdirectory("mesher")